--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_FIREBASE_API_KEY=AIzaSyB0lds9xafTzTW4OLHcAMC2_XpdEgf3NgA
 VITE_EMAIL_SERVICE_ID=service_hiihsfj
 VITE_TEMPLATE_ID=template_ho31zcn
 VITE_PUBLIC_KEY=_xN1IhUkM_538SQ7A
+VITE_BACKEND=https://rentifybackend-k9a1.onrender.com
